Fix task placement after out-of-work appointment